airflow_argo/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow-argo
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
