airflow_argo/infra/airflow_argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-argo
  namespace: airflow-argo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: airflow.rendonindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow-argo-api-server
            port:
              number: 8080
